# ThirstySwordDiscordBot

./: .breakpoints  .dockerignore  .gitignore  .replit  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Data/: data_manager.py
Localization/: localization_conditions .csv  localization_general_commands.csv  localization_labels.csv  localization_moves.csv  localization_playbooks.csv  localizer.py
ThirstySword/: command_manager.py  input_handler.py  main.py
ThirstySword/Data/: command.py  commands_data.py  commands_manager.py  data_commands.csv  data_manager.py  data_moves.csv  data_playbooks.csv  move.py  moves_data.py  playbook.py
ThirstySword/Localization/: localization_beast_moves.csv  localization_commands.csv  localization_conditions.csv  localization_labels.csv  localization_moves.csv  localization_playbooks.csv  localization_scoundrel_moves.csv  localization_spooky_moves.csv  localization_sun_moves.csv  localization_utils.csv  localizer.py
ThirstySword/Localization/Base/: localization_conditions.csv  localization_labels.csv  localization_moves.csv  localization_playbooks.csv
ThirstySword/Localization/Playbooks/: localization_amalgam_moves.csv  localization_beast_moves.csv  localization_bladesoul_moves.csv  localization_bloody_moves.csv  localization_chosen_moves.csv  localization_devoted_moves.csv  localization_dream_moves.csv  localization_ensemble_moves.csv  localization_hologodess_moves.csv  localization_investigator_moves.csv  localization_legion_moves.csv  localization_matriarch_moves.csv  localization_naga_moves.csv  localization_nature_moves.csv  localization_scoundrel_moves.csv  (+5 more)
ThirstySword/Managers/: command_manager.py  commands_manager.py  data_manager.py  moves_manager.py  playbooks_manager.py  slash_command_manager.py
ThirstySword/Utils/: convert_to_requirements.py  keep_bot_alive.py  text_formatter.py
Utils/: csv_reader.py  keep_bot_alive.py
