[tool.poetry]
name = "ThistySwordDiscordBot"
version = "0.1.0"
description = "Discord bot to play Thisty Sword Lesbians"
authors = ["Nightingale"]

[tool.poetry.dependencies]
python = "^3.8.0"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
discord = "^2.0.0"
pandas = "^1.5.0"
wheel = "^0.37.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
